# scam-honeypot-AI

./: .env.example  .gitignore  00_START_HERE.md  API_EXAMPLES.md  CHANGES.md  DEPLOYMENT.md  FILE_STRUCTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  LICENSE  LOCAL_SETUP.md  MASTER_INDEX.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_RENDER_SETUP.md  README.md  REFACTORING_SUMMARY.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT.md  RENDER_SETUP.md  SUBMISSION_CHECKLIST.md  main.py  main_2.py  pyproject.toml  render.yaml  requirements.txt  test.py  test_api.py
honeypot/: AI.py  app.py  store.py  utils.py
honeypot/routers/: chat.py
tests/: test_system.py
