[project]
name = "scam-honeypot-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "starlette",
    "google-genai>=1.61.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
